--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
 Suggests: 
     knitr,
     MASS,
-    rmarkdown
+    rmarkdown,
+    kableExtra
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
